@startuml
skinparam dpi 300
allow_mixing

!include style.iuml

class Book <<@Entity>> {
  + title: String
  + isbn: String
  + price: BigDecimal
  + nbOfPages: Integer
  + publicationDate: LocalDate
  + description: String
  + createdDate: Instant
}

class BookPage <<@Path>> {
  + {static} book(book): TemplateInstance
  + {static} books(books): TemplateInstance
  + <<@GET>> showBookById(id): TemplateInstance
  + <<@GET>> showAllBooks(query, sort, pageIndex, pageSize): TemplateInstance
}

package templates {
  file "book<U+002E>html" as book
  file "books<U+002E>html" as books
  file "base<U+002E>html" as base
}

database PostgreSQL

book <-- base
books <-- base
Book -- PostgreSQL
BookPage ..> Book
BookPage ..> templates
@enduml
